--- a/IIFYM/src/main/res/menu/menu_select_meal_ingredients.xml
+++ b/IIFYM/src/main/res/menu/menu_select_meal_ingredients.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.karimchehab.IIFYM.Activities.Main.activityAddFoodToMeal">
+    tools:context="com.karimchehab.IIFYM_Tracker.Activities.Main.activityAddFoodToMeal">
     <item
         android:id="@+id/menu_next"
         android:orderInCategory="100"
