--- a/IIFYM/src/main/res/layout/activity_about.xml
+++ b/IIFYM/src/main/res/layout/activity_about.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.karimchehab.IIFYM.Activities.Misc.activityAbout">
+    tools:context="com.karimchehab.IIFYM_Tracker.Activities.Misc.activityAbout">
 
     <TextView
         android:id="@+id/lblEmail"
