--- a/IIFYM/src/main/res/layout/activity_home.xml
+++ b/IIFYM/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.karimchehab.IIFYM.Activities.Main.activityHome">
+    tools:context="com.karimchehab.IIFYM_Tracker.Activities.Main.activityHome">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAddDailyItem"
