--- a/IIFYM/src/main/res/layout/fragment_preferences.xml
+++ b/IIFYM/src/main/res/layout/fragment_preferences.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.karimchehab.IIFYM.Activities.Settings.fragmentPreferences">
+    tools:context="com.karimchehab.IIFYM_Tracker.Activities.Settings.fragmentPreferences">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
