--- a/IIFYM/src/main/res/menu/menu_create_food.xml
+++ b/IIFYM/src/main/res/menu/menu_create_food.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
-tools:context="com.karimchehab.IIFYM.Activities.Main.activityCreateFood">
+tools:context="com.karimchehab.IIFYM_Tracker.Activities.Main.activityCreateFood">
 <item
     android:id="@+id/menu_add"
     android:orderInCategory="100"
