--- a/IIFYM/src/main/res/menu/menu_home.xml
+++ b/IIFYM/src/main/res/menu/menu_home.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.karimchehab.IIFYM.HomeActivity">
+    tools:context="com.karimchehab.IIFYM_Tracker.HomeActivity">
     <item
         android:id="@+id/actionToday"
         android:icon="@drawable/ic_today"
