--- a/IIFYM/src/main/res/menu/menu_nutrition_settings.xml
+++ b/IIFYM/src/main/res/menu/menu_nutrition_settings.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.karimchehab.IIFYM.Activities.UserLoginAuthentication.activityRegisterGoals">
+    tools:context="com.karimchehab.IIFYM_Tracker.Activities.UserLoginAuthentication.activityRegisterGoals">
     <item
         android:id="@+id/menu_save"
         android:orderInCategory="100"
