--- a/IIFYM/src/main/res/values/colors.xml
+++ b/IIFYM/src/main/res/values/colors.xml
@@ -35,4 +35,5 @@
     <color name="fabBlue">#805677fc</color>
     <color name="fabBluePressed">#80738ffe</color>
     <color name="colorPrimaryLightDisabled">#37474747</color>
+    <color name="DarkerGray">#aaaaaa</color>
 </resources>
