--- a/app/src/main/res/layout/activity_add_daily_item.xml
+++ b/app/src/main/res/layout/activity_add_daily_item.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activities.Main.activitySelectDailyItem">
+    tools:context=".Activities.Application.ActivitySelectDailyItem">
 
     <LinearLayout
         android:id="@+id/layoutInfo"
