--- a/app/src/main/res/layout/activity_select_daily_item.xml
+++ b/app/src/main/res/layout/activity_select_daily_item.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.karimchehab.IIFYM.Activities.Main.activitySelectDailyItem">
+    tools:context="com.karimchehab.IIFYM.Activities.Application.ActivitySelectDailyItem">
 
     <LinearLayout
         android:orientation="vertical"
