--- a/app/src/main/res/layout/activity_create_food.xml
+++ b/app/src/main/res/layout/activity_create_food.xml
@@ -31,7 +31,7 @@
                 android:hint="@string/hintName"
                 android:textSize="14sp"
                 android:textAlignment="textStart"
-                android:inputType="textCapSentences"/>
+                android:inputType="textCapWords"/>
 
         </LinearLayout>
 
@@ -49,7 +49,7 @@
                 android:hint="@string/hintBrand"
                 android:textSize="14sp"
                 android:textAlignment="textStart"
-                android:inputType="textCapSentences"/>
+                android:inputType="textCapWords"/>
 
         </LinearLayout>
 
@@ -152,43 +152,6 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1">
-
-            <info.hoang8f.android.segmented.SegmentedGroup
-                android:id="@+id/seggroupPortionType"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                app:sc_border_width="2dp"
-                app:sc_corner_radius="10dp">
-
-                <RadioButton
-                    android:id="@+id/rbtnServing"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/serving"
-                    style="@style/RadioButton"
-                    android:checked="true"
-                    android:layout_gravity="center_vertical|center_horizontal" />
-
-                <RadioButton
-                    android:id="@+id/rbtnWeight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/weight"
-                    style="@style/RadioButton"
-                    android:layout_gravity="center_vertical|center_horizontal" />
-
-            </info.hoang8f.android.segmented.SegmentedGroup>
-
-        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -206,12 +169,16 @@
                 android:textSize="14sp"
                 android:hint="@string/hintAmount" />
 
-            <Spinner
-                android:layout_width="match_parent"
+            <EditText
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/spinnerUnit"
-                android:gravity="center_vertical|center"
-                android:layout_weight="1" />
+                android:ems="7"
+                android:id="@+id/etxtPortionType"
+                android:textAlignment="center"
+                android:inputType="textCapWords"
+                android:textColor="?attr/colorPrimary"
+                android:textSize="14sp"
+                android:hint="@string/hintPortionType" />
 
         </LinearLayout>
 
