--- a/app/src/main/res/layout/activity_create_meal.xml
+++ b/app/src/main/res/layout/activity_create_meal.xml
@@ -73,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:ems="15"
                     android:hint="Meal Name"
-                    android:inputType="text"
+                    android:inputType="textCapWords"
 
                     android:textAlignment="textStart"
                     android:textAppearance="?android:attr/textAppearanceMedium"
@@ -93,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:ems="15"
                     android:hint="Brand"
-                    android:inputType="text"
+                    android:inputType="textCapWords"
 
                     android:textAlignment="textStart"
                     android:textAppearance="?android:attr/textAppearanceMedium"
@@ -182,43 +182,6 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="1">
-
-                <info.hoang8f.android.segmented.SegmentedGroup
-                    android:id="@+id/seggroupPortionType"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal"
-                    app:sc_border_width="2dp"
-                    app:sc_corner_radius="10dp">
-
-                    <RadioButton
-                        android:id="@+id/rbtnServing"
-                        style="@style/RadioButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:checked="true"
-                        android:text="@string/serving" />
-
-                    <RadioButton
-                        android:id="@+id/rbtnWeight"
-                        style="@style/RadioButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:text="@string/weight" />
-
-                </info.hoang8f.android.segmented.SegmentedGroup>
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -236,12 +199,16 @@
                     android:textColor="?attr/colorPrimary"
                     android:textSize="14sp" />
 
-                <Spinner
-                    android:id="@+id/spinnerUnit"
-                    android:layout_width="match_parent"
+                <EditText
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|center" />
+                    android:ems="7"
+                    android:id="@+id/etxtPortionType"
+                    android:textAlignment="center"
+                    android:inputType="textCapWords"
+                    android:textColor="?attr/colorPrimary"
+                    android:textSize="14sp"
+                    android:hint="@string/hintPortionType" />
 
             </LinearLayout>
 
