--- a/app/src/main/res/layout/activity_add_daily_item.xml
+++ b/app/src/main/res/layout/activity_add_daily_item.xml
@@ -30,6 +30,14 @@
             android:layout_alignParentTop="true"
             android:orientation="vertical">
 
+            <ProgressBar
+                android:id="@+id/progressBarFatFood"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:indeterminate="true" />
+
             <TextView
                 android:id="@+id/lblName"
                 android:layout_width="match_parent"
@@ -60,7 +68,7 @@
                     android:textColor="@color/colorPrimary" />
 
                 <TextView
-                    android:id="@+id/lblkcals"
+                    android:id="@+id/lblkcal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
