--- a/app/src/main/res/layout/activity_fat_secret_search.xml
+++ b/app/src/main/res/layout/activity_fat_secret_search.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.karimchehab.IIFYM.Activities.Application.ActivityFatSecretSearch">
+    tools:context="com.karimchehab.IIFYM.Activities.Application.ActivityFoodSearch">
 
     <LinearLayout
         android:layout_width="match_parent"
