--- a/app/src/main/res/layout/activity_add_daily_item.xml
+++ b/app/src/main/res/layout/activity_add_daily_item.xml
@@ -8,8 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activities.Application.ActivitySelectDailyItem">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:id="@+id/layoutInfo"
@@ -155,9 +154,8 @@
                     android:id="@+id/lblPortionType"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:gravity="center"
+                    android:gravity="center_vertical|start"
                     android:text="@string/lblPortionType"
-                    android:textAlignment="textStart"
                     android:textColor="@color/colorPrimary" />
 
 
