--- a/app/src/main/res/layout/activity_food_manager.xml
+++ b/app/src/main/res/layout/activity_food_manager.xml
@@ -39,16 +39,9 @@
                 android:hint="Search ..."
                 tools:layout_editor_absoluteY="0dp"
                 tools:layout_editor_absoluteX="0dp"
-                android:layout_weight="0.75" />
+                android:layout_weight="0.75"
+                android:imeOptions="actionSearch"/>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/lblFrequent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/lblFrequent"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp" />
 
         <ListView
             android:layout_width="match_parent"
